# Komodo

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  appveyor.yml  setup.sh
.github/workflows/: build-cmake.yml
cmake/: Packages.cmake
examples/: CMakeLists.txt
examples/circle/: CMakeLists.txt  main.cpp
examples/move_behavior/: CMakeLists.txt  main.cpp  move_behavior.h
examples/moving_circle/: CMakeLists.txt  main.cpp  move_behavior.h
examples/simple_behavior/: CMakeLists.txt  main.cpp  simple_behavior.h
examples/sprite/: CMakeLists.txt  main.cpp
komodo/: CMakeLists.txt
komodo/include/komodo/core/: game.h
komodo/include/komodo/core/ecs/components/: behavior_component.h  component.h  drawable_2d_component.h  sprite_component.h  text_component.h
komodo/include/komodo/core/ecs/entities/: entity.h
komodo/include/komodo/core/ecs/systems/: behavior_system.h  render_2d_system.h  system.h
komodo/src/komodo/core/: game.cpp
komodo/src/komodo/core/ecs/components/: behavior_component.cpp  component.cpp  drawable_2d_component.cpp  sprite_component.cpp  text_component.cpp
komodo/src/komodo/core/ecs/entities/: entity.cpp
komodo/src/komodo/core/ecs/systems/: behavior_system.cpp  render_2d_system.cpp  system.cpp
src/: CMakeLists.txt  main.cpp
src/include/komodo/core/: game.h
src/include/komodo/core/ecs/components/: behavior_component.h  component.h  drawable_2d_component.h  sprite_component.h  text_component.h
src/include/komodo/core/ecs/entities/: entity.h
src/komodo/core/: game.cpp
src/komodo/core/ecs/components/: behavior_component.cpp  component.cpp  drawable_2d_component.cpp  sprite_component.cpp  text_component.cpp
src/komodo/core/ecs/entities/: entity.cpp
