add_executable(
    example
    main.cpp
    "komodo/core/game.cpp"
    "komodo/core/ecs/entities/entity.cpp"
)
target_include_directories(
  example
  PUBLIC
  include
)

target_link_libraries(
  example
  PRIVATE
  project_options
  project_warnings
  spdlog
  sfml-audio
  sfml-network
  sfml-graphics
  sfml-window
  sfml-system
)
